--- a/index-2.html
+++ b/index-2.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chess: The Art of Strategy</title>
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
       background-color: #f4f4f4;
+      color: #222;
     }
 
     header {
@@ -17,12 +19,26 @@
       text-align: center;
     }
 
+    .image-container {
+      text-align: center;
+      background-color: #f4f4f4;
+      margin: 20px 0;
+    }
+
+    .image-container img {
+      width: 90%;
+      max-width: 1000px;
+      height: auto;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.15);
+    }
+
     .container {
       display: flex;
       flex-wrap: wrap;
-      padding: 20px;
-      gap: 20px;
       justify-content: center;
+      gap: 20px;
+      padding: 20px;
     }
 
     .column {
@@ -30,19 +46,13 @@
       background-color: white;
       padding: 20px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      min-width: 300px;
-    }
-
-    .image-container {
-      text-align: center;
-      margin: 20px 0;
-    }
-
-    .image-container img {
-      max-width: 90%;
-      height: auto;
       border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.15);
+      min-width: 300px;
+      box-sizing: border-box;
+    }
+
+    h2 {
+      color: #333;
     }
 
     footer {
@@ -51,6 +61,12 @@
       text-align: center;
       padding: 10px 0;
       width: 100%;
+    }
+
+    @media (max-width: 768px) {
+      .column {
+        flex: 1 1 100%;
+      }
     }
   </style>
 </head>
@@ -61,7 +77,8 @@
   </header>
 
   <div class="image-container">
-    <img src="attached_assets/Chess picture_1761578688142.jpg" alt="Chess Image">
+    <!-- Make sure "Chess picture.jpg" is in the same folder as this HTML file -->
+    <img src="Chess picture.jpg" alt="Chess pieces on a cloud-themed chessboard">
   </div>
 
   <div class="container">
@@ -84,4 +101,3 @@
 
 </body>
 </html>
-
